# starlink-blade-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
.github/workflows/: ci.yml
src/starlink_blade_mcp/: __init__.py  __main__.py  formatters.py  grpc_client.py  models.py  server.py
tests/: conftest.py  test_formatters.py  test_grpc_client.py  test_models.py  test_server.py
